--- a/ivs-scraper/Cargo.toml
+++ b/ivs-scraper/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 chrono = "0.4.38"
 cli-table = "0.4.7"
+reqwest = {version = "0.11", features = ["blocking"]}
+scraper = "0.12.0"
